src/tests/fixtures/verification-parsers/tsc-failure.txt
src/index.ts(10,5): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
src/utils.ts:15:3 - error TS2322: Type 'string' is not assignable to type 'number'.

10     takeNumber("hello");
       ~~~~~~~~~~~~~~~~~~~

Found 2 errors in 2 files.

Errors  Files
     1  src/index.ts:10
     1  src/utils.ts:15
